warnings fixed, evaluating of config added, polling added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(gpiod)
 
-ADD_EXECUTABLE(gpiod gpiod.c inc/configparser.c inc/gpio_helpers.c)
+SET(CMAKE_C_FLAGS "-I -g -Wall")
+
+ADD_EXECUTABLE(gpiod gpiod.c inc/gpio_helpers.c)
