bugfixes support for GPIO aliases added support for value-writing on outputs added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(gpiod)
 
-SET(CMAKE_C_FLAGS "-I -g -Wall")
+SET(CMAKE_C_FLAGS "-I . -I inc/ -g -Wall")
 
 ADD_EXECUTABLE(gpiod gpiod.c inc/gpio_helpers.c)
